tests/scripts/type_errors/record_literal_on_non_record.roto
fn foo() {
    String { a: 8 };
}
